# extract-permits

./: .gitignore  .lintr  .pre-commit-config.yaml  README.md  matches_pin10_in_PARID_1428114070.csv  matches_pin10_in_PARID_1428114070.xlsx
.github/workflows/: .lintr  (+1 more)
chicago/: Pipfile  format_reviewed_permits_for_upload.py  helper.py  permit_cleaning.py  permit_cleaning_testing.py  permits_needing_review.xlsx  pyproject.toml
chicago/legacy_permits/: crosswalk.xlsx  format_reviewed_permits_for_upload.py  helper.R  helper.py  verify_legacy_uploads.R
chicago/legacy_permits/2021/: 2021 manual review processed- JW completed (1).xlsx  2021 manual review processed.xlsx  format_legacy_2021.R
chicago/legacy_permits/2022/: 2022 City permits for manual review v5processed (005).xlsx  2022 City permits for manual review v5processed (1).xlsx  format_legacy_2022.R
chicago/legacy_permits/2023/: 2023permits_processed_2.xlsx  format_legacy_2023.R
chicago/templates/: permit_processing.xlsm  permits_needing_review.xlsx
files_for_review_2025_09_10/: 2025_09_10_permits_review.xlsx
files_for_smartfile_2025_09_09/: 2025_09_09_permits_ready_1.xlsx  2025_09_09_permits_ready_10.xlsx  2025_09_09_permits_ready_11.xlsx  2025_09_09_permits_ready_12.xlsx  2025_09_09_permits_ready_13.xlsx  2025_09_09_permits_ready_14.xlsx  2025_09_09_permits_ready_15.xlsx  2025_09_09_permits_ready_16.xlsx  2025_09_09_permits_ready_17.xlsx  2025_09_09_permits_ready_18.xlsx  2025_09_09_permits_ready_19.xlsx  2025_09_09_permits_ready_2.xlsx  2025_09_09_permits_ready_20.xlsx  2025_09_09_permits_ready_21.xlsx  (+61 more)
(+68 files in other folders)
